# QuranFrontier

./: .gitignore  AGRICULTURE_PRINCIPLES_MATHEMATICAL_FORMALIZATION.md  AGRICULTURE_VALIDATION_TESTING_FRAMEWORK.md  ANSARI_BRIEFING_SUMMARY.md  ANSARI_COLLABORATION_EMAIL.txt  ANSARI_COLLABORATION_SPECIFICATION.md  AUTO_FIX_VERIFICATION_REPORT.md  BIOLOGICAL_GENETIC_FORMALIZATION_COMPLETE.md  BIOLOGICAL_GENETIC_FORMALIZATION_INDEX.md  BUILD_COMPLETE_SYSTEM_IMPLEMENTATION.md  BULLETPROOF_QURAN_MODEL_ARCHITECTURE.md  COMPREHENSIVE_COMPETITIVE_ANALYSIS.md  CONSOLIDATION_SUMMARY.md  Dockerfile.api  Dockerfile.etl  Dockerfile.frontend  Dockerfile.worker  ENGINEERING_PRINCIPLES_DEPLOYMENT_GUIDE.md  ENGINEERING_PRINCIPLES_INDEX.md  ENSEMBLE_SYNTHESIS_ACTIONABLE_PLAN.md  EXECUTIVE_DECISION_DOCUMENT.md  EXTRACTION_STATUS_MARCH_15_2024.md  FINAL_100_PERCENT_COMPLETE_ALL_TIERS.md  FINAL_SYSTEM_COMPLETION_REPORT.md  FORMALIZATION_COMPLETION_REPORT.md  HEALTHCARE_DOCUMENTATION_INDEX.md  HEALTHCARE_EXTRACTION_SUMMARY.txt  HEALTHCARE_IMPLEMENTATION_GUIDE.md  HEALTHCARE_PRINCIPLES_MATHEMATICAL_FORMALIZATION.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_BRIEFING_PHASE_2.md  META_PRINCIPLES_EXECUTION_COMPLETE.md  MISSING_COMPONENTS_REPORT.md  MODELS_HIERARCHY_VISUALIZATION.md  MODELS_QUICK_INDEX.md  NASKH_VERIFIED_DATASET_PHASE1.md  NEO4J_IMPLEMENTATION_SUMMARY.md  NEO4J_KNOWLEDGE_GRAPH_GUIDE.md  NOVEL_AND_DISRUPTIVE_MODELS_COMPLETE_SCAN.md  PHASE1_COMPLETION_REPORT.md  (+52 more)
applications/: __init__.py
archive/: research_root_init.py
consolidated_data/: CONSOLIDATION_STATISTICS.txt  README.md  consolidation_report.json  hadith_consolidated.json  tafsir_consolidated.json  verse_consolidated.json
corpus/: normalization_report.json  normalized_quran.json  normalized_quran_searchable.json  validation_report.json
data/: BUILD_JOURNEY.md  FrontierDashboard.tsx  FrontierDashboard.tsx 2  Journey Through Syria April 2025 Landing Page.html  KASBAH_COMPLETE_TECHNICAL_SPECIFICATION_v5.0.0.md  V5_MEGA_REPORT.md  altafsir_compliance_report.md  chat-export-11.txt  dorar_integration_plan.md  gamificationAndLearning.ts  index 3.ts  page.tsx 2  quran-frontier.ts  route 3.ts  route.ts  worklog.md
database/: COMPLETION_REPORT.md  DATABASE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  requirements.txt  schema.sql
docs/: ANSARI_COLLABORATION_PACKAGE.md  ANSARI_COLLABORATION_SPECIFICATION.md  ANSARI_EXECUTIVE_SUMMARY.md  ANSARI_INTEGRATION_CODEBASE.md  ANSARI_OUTREACH_EMAIL.txt  API_SPECIFICATION.md  DELIVERABLES_MANIFEST.txt  DEPLOYMENT_RUNBOOK.md  GOVERNANCE_CHARTER.md  PHASE_1_COMPLETION_REPORT.md  QURANIC_COGNITIVE_PRINCIPLES_MATHEMATICAL_FORMALIZATION.md  QURANIC_PRINCIPLES_EXTRACTION_SUMMARY.md  QURANIC_PRINCIPLES_INDEX.md  QURANIC_PRINCIPLES_QUICK_REFERENCE.md  Q_SDK_API_REFERENCE.md  SCHOLAR_GUIDE.md  hardware-products.html  project-map.mermaid  wild-products.html
embeddings/: embedding_config.json  generate_embeddings.py  generate_embeddings_fast.py  run_embedding_pipeline.sh  semantic_search.py
etl/: corpus_schema.json  etl_pipeline.py
nomos/rust/: Cargo.toml
nomos/rust/src/: hypergraph.rs
(+869 files in other folders)
