[package]
name = "frontier_core_rust"
version = "4.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.7"

[dev-dependencies]
criterion = "0.5"

[lib]
name = "frontier_core_rust"
path = "src/lib.rs"

[[test]]
name = "test_hypergraph"
path = "tests/test_hypergraph.rs"
